--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,8 @@ dependencies {
     testCompile ('junit:junit:4.12') {
         exclude group: 'org.hamcrest'
     }
-    compileOnly ("org.elasticsearch.plugin:transport-netty4-client:7.8.1")
+    testCompile "org.elasticsearch.plugin:reindex-client:${es_version}"
+    compileOnly "org.elasticsearch.plugin:transport-netty4-client:${es_version}"
     compileOnly "org.elasticsearch:elasticsearch:${es_version}"
 }
 compileTestJava {
