Rest Layer and Async Search Cleanup Management (#9)
Changes include
1. Rest Layer for all APIs
2. ManagementService for cleanup
3. Stats for async search based on state machine
4. Few additional tests

Co-authored-by: Bukhtawar Khan <bukhtawa@amazon.com>
Co-authored-by: Surya Nistala <snistala@amazon.com>

--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
         exclude group: 'org.hamcrest'
     }
     testCompile "org.elasticsearch.plugin:reindex-client:${es_version}"
+    testCompile "org.elasticsearch.test:framework:${es_version}"
     compileOnly "org.elasticsearch.plugin:transport-netty4-client:${es_version}"
     compileOnly "org.elasticsearch:elasticsearch:${es_version}"
 }
