--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ ext {
 }
 
 group 'com.amazon.opendistroforelasticsearch'
-version es_version
+version opendistroVersion
 
 sourceCompatibility = 1.9
 
@@ -70,7 +70,7 @@ compileTestJava {
 check.dependsOn jacocoTestReport
 
 esplugin {
-    name 'asynchronous_search_plugin'
+    name 'opendistro-asynchronous-search'
     description "Provides support for asynchronous search"
     classname 'com.amazon.opendistroforelasticsearch.search.async.plugin.AsyncSearchPlugin'
 }
