--- a/build-tools/plugin-coverage.gradle
+++ b/build-tools/plugin-coverage.gradle
@@ -26,11 +26,11 @@
  *  cluster is stopped and dump it to a file. Luckily our current security policy seems to allow this. This will also probably
  *  break if there are multiple nodes in the integTestCluster. But for now... it sorta works.
  */
+apply plugin: 'jacoco'
 
 // Get gradle to generate the required jvm agent arg for us using a dummy tasks of type Test. Unfortunately Elastic's
 // testing tasks don't derive from Test so the jacoco plugin can't do this automatically.
 def jacocoDir = "${buildDir}/jacoco"
-
 task dummyTest(type: Test) {
     enabled = false
     workingDir = file("/") // Force absolute path to jacoco agent jar
@@ -62,9 +62,11 @@ jacocoTestReport {
     classDirectories.from = sourceSets.main.output
     reports {
         html.enabled = true // human readable
+        csv.enabled = true
         xml.enabled = true // for coverlay
     }
 }
+
 
 allprojects{
     afterEvaluate {
