--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,10 @@ apply plugin: 'elasticsearch.testclusters'
 apply plugin: 'idea'
 apply plugin: 'elasticsearch.esplugin'
 
+checkstyle {
+    toolVersion = '8.24'
+}
+
 def usingRemoteCluster = System.properties.containsKey('tests.rest.cluster') || System.properties.containsKey('tests.cluster')
 def usingMultiNode = project.properties.containsKey('numNodes')
 // Only apply jacoco test coverage if we are running a local single node cluster
