build and test workflow (#28)
Fixes build and release workflow

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ buildscript {
 // Build configurations
 //****************************************************************************/
 
+plugins {
+    id 'nebula.ospackage' version "8.3.0"
+}
+
 apply plugin: 'java'
 apply plugin: 'jacoco'
 apply plugin: 'elasticsearch.testclusters'
@@ -44,6 +48,7 @@ ext {
     projectSubstitutions = [:]
     licenseFile = rootProject.file('LICENSE.txt')
     noticeFile = rootProject.file('NOTICE.txt')
+    isSnapshot = "true" == System.getProperty("build.snapshot", "true")
 }
 
 group 'com.amazon.opendistroforelasticsearch'
@@ -178,3 +183,5 @@ run {
         }
     }
 }
+
+apply from: 'build-tools/pkgbuild.gradle'
