--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 buildscript {
     ext {
-        es_version = '7.9.1'
+        es_version = '7.10.2'
         distribution = 'oss-zip'
         es_group = "org.elasticsearch"
-        opendistroVersion = '1.11.1.0'
+        opendistroVersion = '1.13.0'
     }
 
     repositories {
@@ -26,9 +26,10 @@ plugins {
 
 apply plugin: 'java'
 apply plugin: 'jacoco'
-apply plugin: 'elasticsearch.testclusters'
 apply plugin: 'idea'
 apply plugin: 'elasticsearch.esplugin'
+apply plugin: 'elasticsearch.testclusters'
+apply plugin: 'elasticsearch.rest-test'
 
 checkstyle {
     toolVersion = '8.24'
@@ -52,7 +53,7 @@ ext {
 }
 
 group 'com.amazon.opendistroforelasticsearch'
-version opendistroVersion
+version = "${opendistroVersion}.0"
 
 sourceCompatibility = 1.9
 
@@ -69,7 +70,7 @@ dependencies {
     testCompile "org.elasticsearch.test:framework:${es_version}"
     compileOnly "org.elasticsearch.plugin:transport-netty4-client:${es_version}"
     compileOnly "org.elasticsearch:elasticsearch:${es_version}"
-    compile "com.amazon.opendistroforelasticsearch:common-utils:${opendistroVersion}"
+    compile "com.amazon.opendistroforelasticsearch:common-utils:${opendistroVersion}.0"
     configurations.all {
         resolutionStrategy {
             force "com.puppycrawl.tools:checkstyle:${project.checkstyle.toolVersion}"
@@ -86,8 +87,12 @@ check.dependsOn jacocoTestReport
 
 esplugin {
     name 'opendistro-asynchronous-search'
-    description "Provides support for asynchronous search"
+    description 'Provides support for asynchronous search'
     classname 'com.amazon.opendistroforelasticsearch.search.asynchronous.plugin.AsynchronousSearchPlugin'
+}
+
+tasks.named("integTest").configure {
+    it.dependsOn(project.tasks.named("bundlePlugin"))
 }
 
 //TODO enable license headers
@@ -95,16 +100,40 @@ licenseHeaders.enabled = false
 dependencyLicenses.enabled = false
 thirdPartyAudit.enabled = false
 validateNebulaPom.enabled = false
+loggerUsageCheck.enabled = false
 
 def es_tmp_dir = rootProject.file('build/private/es_tmp').absoluteFile
 es_tmp_dir.mkdirs()
 
+def securityEnabled = System.getProperty("security", "false") == "true"
 afterEvaluate {
     testClusters.integTest.nodes.each { node ->
         def plugins = node.plugins
         def firstPlugin = plugins.get(0)
         plugins.remove(0)
         plugins.add(firstPlugin)
+        if (securityEnabled) {
+            node.extraConfigFile("kirk.pem", file("src/test/resources/security/kirk.pem"))
+            node.extraConfigFile("kirk-key.pem", file("src/test/resources/security/kirk-key.pem"))
+            node.extraConfigFile("esnode.pem", file("src/test/resources/security/esnode.pem"))
+            node.extraConfigFile("esnode-key.pem", file("src/test/resources/security/esnode-key.pem"))
+            node.extraConfigFile("root-ca.pem", file("src/test/resources/security/root-ca.pem"))
+            node.setting("opendistro_security.ssl.transport.pemcert_filepath", "esnode.pem")
+            node.setting("opendistro_security.ssl.transport.pemkey_filepath", "esnode-key.pem")
+            node.setting("opendistro_security.ssl.transport.pemtrustedcas_filepath", "root-ca.pem")
+            node.setting("opendistro_security.ssl.transport.enforce_hostname_verification", "false")
+            node.setting("opendistro_security.ssl.http.enabled", "true")
+            node.setting("opendistro_security.ssl.http.pemcert_filepath", "esnode.pem")
+            node.setting("opendistro_security.ssl.http.pemkey_filepath", "esnode-key.pem")
+            node.setting("opendistro_security.ssl.http.pemtrustedcas_filepath", "root-ca.pem")
+            node.setting("opendistro_security.allow_unsafe_democertificates", "true")
+            node.setting("opendistro_security.allow_default_init_securityindex", "true")
+            node.setting("opendistro_security.authcz.admin_dn", "CN=kirk,OU=client,O=client,L=test,C=de")
+            node.setting("opendistro_security.audit.type", "internal_elasticsearch")
+            node.setting("opendistro_security.enable_snapshot_restore_privilege", "true")
+            node.setting("opendistro_security.check_snapshot_restore_write_privileges", "true")
+            node.setting("opendistro_security.restapi.roles_enabled", "[\"all_access\", \"security_rest_api_access\"]")
+        }
     }
 }
 
@@ -118,41 +147,9 @@ File repo = file("$buildDir/testclusters/repo")
 def _numNodes = findProperty('numNodes') as Integer ?: 1
 
 
-test {
-    enabled = true
-}
-
-integTest.runner {
-    systemProperty 'tests.security.manager', 'false'
-    systemProperty 'java.io.tmpdir', es_tmp_dir.absolutePath
-
-    systemProperty "https", System.getProperty("https")
-    systemProperty "user", System.getProperty("user")
-    systemProperty "password", System.getProperty("password")
-
-    // The 'doFirst' delays till execution time.
-    doFirst {
-        // Tell the test JVM if the cluster JVM is running under a debugger so that tests can
-        // use longer timeouts for requests.
-        def isDebuggingCluster = getDebug() || System.getProperty("test.debug") != null
-        systemProperty 'cluster.debug', isDebuggingCluster
-        // Set number of nodes system property to be used in tests
-        systemProperty 'cluster.number_of_nodes', "${_numNodes}"
-        // There seems to be an issue when running multi node run or integ tasks with unicast_hosts
-        // not being written, the waitForAllConditions ensures it's written
-        getClusters().forEach { cluster ->
-            cluster.waitForAllConditions()
-        }
-    }
-
-    // The --debug-jvm command-line option makes the cluster debuggable; this makes the tests debuggable
-    if (System.getProperty("test.debug") != null) {
-        jvmArgs '-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005'
-    }
-}
-
 testClusters.integTest {
     testDistribution = "OSS"
+    plugin(project.tasks.bundlePlugin.archiveFile)
     // Cluster shrink exception thrown if we try to set numberOfNodes to 1, so only apply if > 1
     if (_numNodes > 1) numberOfNodes = _numNodes
     // When running integration tests it doesn't forward the --debug-jvm to the cluster anymore
@@ -174,7 +171,33 @@ testClusters.integTest {
     }
 }
 
+integTest {
+    systemProperty 'tests.security.manager', 'false'
+    systemProperty 'java.io.tmpdir', es_tmp_dir.absolutePath
+    systemProperty 'buildDir', buildDir.path
+    systemProperty "https", System.getProperty("https", securityEnabled.toString())
+    systemProperty "user", System.getProperty("user", "admin")
+    systemProperty "password", System.getProperty("password", "admin")
+    // Tell the test JVM if the cluster JVM is running under a debugger so that tests can use longer timeouts for
+    // requests. The 'doFirst' delays reading the debug setting on the cluster till execution time.
+    doFirst {
+        systemProperty 'cluster.debug', getDebug()
+        // Set number of nodes system property to be used in tests
+        systemProperty 'cluster.number_of_nodes', "${_numNodes}"
+        // There seems to be an issue when running multi node run or integ tasks with unicast_hosts
+        // not being written, the waitForAllConditions ensures it's written
+        getClusters().forEach { cluster ->
+            cluster.waitForAllConditions()
+        }
+    }
+    // The -Dcluster.debug option makes the cluster debuggable; this makes the tests debuggable
+    if (System.getProperty("test.debug") != null) {
+        jvmArgs '-agentlib:jdwp=transport=dt_socket,server=n,suspend=y,address=8000'
+    }
+}
+
 run {
+    useCluster project.testClusters.integTest
     doFirst {
         // There seems to be an issue when running multi node run or integ tasks with unicast_hosts
         // not being written, the waitForAllConditions ensures it's written
