Change branch from master to main (#36)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,12 +3,12 @@ name: Test and Build Workflow
 on:
   pull_request:
     branches:
-      - master
+      - main
       - opendistro-*
       - plugin-dev
   push:
     branches:
-      - master
+      - main
       - opendistro-*
       - plugin-dev
 
