gradle properties change

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,5 @@
 #
 
 version = 1.9.0
-JAVA_HOME_FOR_MY_PROJECT=/Library/Java/JavaVirtualMachines/jdk-14.0.1.jdk/Contents/Home
-org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk-14.0.1.jdk/Contents/Home
+#JAVA_HOME_FOR_MY_PROJECT=/Library/Java/JavaVirtualMachines/jdk-14.0.1.jdk/Contents/Home
+#org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk-14.0.1.jdk/Contents/Home
