--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
             url = 's3://search-vemsarat/'
             credentials(AwsCredentials) {
                 accessKey = System.env.AWS_ACCESS_KEY_ID ?: findProperty('aws_access_key_id')
-                secretKey = System.env.AWS_ACCESS_KEY_ID ?: findProperty('aws_secret_access_key')
+                secretKey = System.env.AWS_SECRET_ACCESS_KEY ?: findProperty('aws_secret_access_key')
             }
         }
         jcenter()
@@ -70,8 +70,8 @@ repositories {
     maven {
         url = 's3://search-vemsarat/'
         credentials(AwsCredentials) {
-            accessKey = "AKIAUPQMZBE7UNXZ7YU2"
-            secretKey = "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"
+            accessKey = System.env.AWS_ACCESS_KEY_ID ?: findProperty('aws_access_key_id')
+            secretKey = System.env.AWS_SECRET_ACCESS_KEY ?: findProperty('aws_secret_access_key')
         }
     }
 }
