fix syntax in build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,20 +39,14 @@ jobs:
           if docker pull opendistroforelasticsearch/opendistroforelasticsearch:$version
           then
           echo "FROM opendistroforelasticsearch/opendistroforelasticsearch:$version" >> Dockerfile
-          echo "RUN if [ -d /usr/share/elasticsearch/plugins/opendistro-asynchronous-search ]; then
-         /usr/share/elasticsearch/bin/elasticsearch-plugin remove opendistro-asynchronous-search; fi" >> Dockerfile
-          echo "RUN yum -y update \ && yum -y groupinstall "Development Tools" \ && yum install -y unzip glibc.x86_64 cmake \ && yum clean
-         all" >> Dockerfile
-          echo "RUN git clone --recursive --branch ${GITHUB_REF##*/} https://github.com/opendistro-for-elasticsearch/asynchronous-search
-         .git /usr/share/elasticsearch/asynchronous-search \ " >> Dockerfile
-          echo "&& cd /usr/share/elasticsearch/asynchronous-search/jni \ && sed -i 's/-march=native/-march=x86-64/g'
-         external/nmslib/similarity_search/CMakeLists.txt \ && cmake . \ && make \ " >> Dockerfile
-          echo "&& mkdir /tmp/jni/ && cp release/*.so /tmp/jni/ && ls -ltr /tmp/jni/ \ && rm -rf
-         /usr/share/elasticsearch/asynchronous-search" >> Dockerfile
+          echo "RUN if [ -d /usr/share/elasticsearch/plugins/opendistro-asynchronous-search ]; then /usr/share/elasticsearch/bin/elasticsearch-plugin remove opendistro-asynchronous-search; fi" >> Dockerfile
+          echo "RUN yum -y update \ && yum -y groupinstall "Development Tools" \ && yum install -y unzip glibc.x86_64 cmake \ && yum clean all" >> Dockerfile
+          echo "RUN git clone --recursive --branch ${GITHUB_REF##*/} https://github.com/opendistro-for-elasticsearch/asynchronous-search.git /usr/share/elasticsearch/asynchronous-search \ " >> Dockerfile
+          echo "&& cd /usr/share/elasticsearch/asynchronous-search/jni \ && sed -i 's/-march=native/-march=x86-64/g' external/nmslib/similarity_search/CMakeLists.txt \ && cmake . \ && make \ " >> Dockerfile
+          echo "&& mkdir /tmp/jni/ && cp release/*.so /tmp/jni/ && ls -ltr /tmp/jni/ \ && rm -rf /usr/share/elasticsearch/asynchronous-search" >> Dockerfile
           echo "RUN cd /usr/share/elasticsearch/" >> Dockerfile
           echo "ADD asynchronous-search/build/distributions/opendistro-asynchronous-search-$plugin_version.zip /tmp/" >> Dockerfile
-          echo "RUN /usr/share/elasticsearch/bin/elasticsearch-plugin install --batch
-         file:/tmp/opendistro-asynchronous-search-$plugin_version.zip" >> Dockerfile
+          echo "RUN /usr/share/elasticsearch/bin/elasticsearch-plugin install --batch file:/tmp/opendistro-asynchronous-search-$plugin_version.zip" >> Dockerfile
           docker build -t odfe-asynchronous-search:test .
           echo "imagePresent=true" >> $GITHUB_ENV
           else
@@ -71,8 +65,7 @@ jobs:
               if [ $security -gt 0 ]
               then
                 echo "Security plugin is available. Running tests in security mode"
-                ./gradlew :integTest -Dtests.rest.cluster=localhost:9200 -Dtests.cluster=localhost:9200 -Dtests
-         .clustername="docker-cluster" -Dhttps=true -Duser=admin -Dpassword=admin
+                ./gradlew :integTest -Dtests.rest.cluster=localhost:9200 -Dtests.cluster=localhost:9200 -Dtests .clustername="docker-cluster" -Dhttps=true -Duser=admin -Dpassword=admin
               else
                 echo "Security plugin is NOT available. Skipping tests as they are already ran part of ./gradlew build"
               fi
