--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ buildscript {
         maven {
             url = 's3://search-vemsarat/'
             credentials(AwsCredentials) {
-                accessKey = ${{ secrets.AWS_ACCESS_KEY_ID }}
-                secretKey = ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                accessKey: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                secretKey: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
             }
         }
         jcenter()
