s3 maven repo minor tweak

--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ buildscript {
         maven {
             url = 's3://search-vemsarat/'
             credentials(AwsCredentials) {
-                accessKey: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                secretKey: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                accessKey = System.env.AWS_ACCESS_KEY_ID ?: findProperty('aws_access_key_id')
+                secretKey = System.env.AWS_SECRET_ACCESS_KEY ?: findProperty('aws_secret_access_key')
             }
         }
         jcenter()
@@ -65,16 +65,19 @@ version = "${opendistroVersion}.1"
 
 sourceCompatibility = 1.9
 
-repositories {
-    mavenCentral()
-    maven {
-        url = 's3://search-vemsarat/'
-        credentials(AwsCredentials) {
-            accessKey = ${{ secrets.AWS_ACCESS_KEY_ID }}
-            secretKey = ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+subprojects {
+    repositories {
+        mavenCentral()
+        maven {
+            url = 's3://search-vemsarat/'
+            credentials(AwsCredentials) {
+                accessKey = System.env.AWS_ACCESS_KEY_ID ?: findProperty('aws_access_key_id')
+                secretKey = System.env.AWS_SECRET_ACCESS_KEY ?: findProperty('aws_secret_access_key')
+            }
         }
     }
 }
+
 
 dependencies {
     testCompile ('junit:junit:4.12') {
