--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,14 +19,33 @@ jobs:
     # This job runs on Linux. TODO Make it work for other OS distributions
     runs-on: ubuntu-latest
     steps:
-      # This step uses the checkout Github action: https://github.com/actions/checkout
-      - name: Checkout Branch
-        uses: actions/checkout@v2
       # This step uses the setup-java Github action: https://github.com/actions/setup-java
       - name: Set Up JDK 14
         uses: actions/setup-java@v1
         with:
           java-version: 14
+      # dependencies: OpenSearch
+      - name: Checkout OpenSearch
+        uses: actions/checkout@v2
+        with:
+          repository: 'opensearch-project/OpenSearch'
+          path: OpenSearch
+          ref: '1.0.0-alpha1'
+      - name: Build OpenSearch
+        working-directory: ./OpenSearch
+        run: ./gradlew publishToMavenLocal -Dbuild.version_qualifier=alpha1 -Dbuild.snapshot=false
+      # dependencies: common-utils
+      - name: Checkout common-utils
+        uses: actions/checkout@v2
+        with:
+          repository: 'opensearch-project/common-utils'
+          path: common-utils
+      - name: Build common-utils
+        working-directory: ./common-utils
+        run: ./gradlew publishToMavenLocal -Dopensearch.version=1.0.0-alpha1
+      # This step uses the checkout Github action: https://github.com/actions/checkout
+      - name: Checkout Branch
+        uses: actions/checkout@v2
       - name: Build with Gradle
         run: ./gradlew build
       - name: Upload failed logs
