--- a/.github/workflows/multi-node-test-workflow.yml
+++ b/.github/workflows/multi-node-test-workflow.yml
@@ -34,9 +34,9 @@ jobs:
       - name: Checkout common-utils
         uses: actions/checkout@v2
         with:
+          ref: '1.0.0-alpha2'
           repository: 'opensearch-project/common-utils'
           path: common-utils
-          ref: '1.0.0-alpha2'
       - name: Build OpenSearch
         working-directory: ./OpenSearch
         run: ./gradlew publishToMavenLocal -Dbuild.version_qualifier=alpha2 -Dbuild.snapshot=false
@@ -47,7 +47,7 @@ jobs:
       - name: Checkout Branch
         uses: actions/checkout@v2
       - name: Run integration tests with multi node config
-        run: ./gradlew integTest -PnumNodes=5
+        run: ./gradlew integTest -PnumNodes=5 -Dopensearch.version=1.0.0-alpha2
       - name: Upload failed logs
         uses: actions/upload-artifact@v2
         if: failure()
