Enabled automated license header checks
1. Added the SPDX license header to the files with missing license headers.
2. Re-enabled the 'licenseHeaders' check in the build.gradle file.
3. Added an IntelliJ copyright profile to auto-generate the SPDX license header.
4. Updated the .gitignore file.

Signed-off-by: Ketan Verma <ketan9495@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -113,8 +113,7 @@ tasks.named("integTest").configure {
     it.dependsOn(project.tasks.named("bundlePlugin"))
 }
 
-//TODO enable license headers
-licenseHeaders.enabled = false
+licenseHeaders.enabled = true
 dependencyLicenses.enabled = false
 thirdPartyAudit.enabled = false
 validateNebulaPom.enabled = false
