--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,8 @@ jobs:
         run: ./gradlew build -Dopensearch.version=1.0.0
       - name: Pull and Run Docker for security tests
         run: |
+          list_of_files=`ls`
+          echo $ls
           plugin=`ls asynchronous-search/build/distributions/*.zip`
           list_of_files=`ls`
           list_of_all_files=`ls asynchronous-search/build/distributions/`
