--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,9 @@ jobs:
         run: |
           list_of_files=`ls`
           echo "List files: " $ls
+          cd ..
+          list_of_files=`ls`
+          echo "List files: " $ls
           plugin=`ls asynchronous-search/build/distributions/*.zip`
           list_of_files=`ls`
           list_of_all_files=`ls asynchronous-search/build/distributions/`
