--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,9 @@ jobs:
           echo "List files: " $ls
           cd ..
           list_of_files=`ls`
+          pwd=`pwd`
           echo "List files: " $ls
+          echo "Pwd:" $pwd
           plugin=`ls asynchronous-search/build/distributions/*.zip`
           list_of_files=`ls`
           list_of_all_files=`ls asynchronous-search/build/distributions/`
