--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,30 +30,30 @@ jobs:
         with:
           repository: 'opensearch-project/OpenSearch'
           path: OpenSearch
-          ref: '1.0'
+          ref: '1.0.0-rc1'
       - name: Build OpenSearch
         working-directory: ./OpenSearch
-        run: ./gradlew publishToMavenLocal -Dbuild.snapshot=false
+        run: ./gradlew publishToMavenLocal -Dbuild.version_qualifier=rc1 -Dbuild.snapshot=false
       # dependencies: common-utils
       - name: Checkout common-utils
         uses: actions/checkout@v2
         with:
-          ref: '1.0'
+          ref: '1.0.0.0-rc1'
           repository: 'opensearch-project/common-utils'
           path: common-utils
       - name: Build common-utils
         working-directory: ./common-utils
-        run: ./gradlew publishToMavenLocal -Dopensearch.version=1.0.0
+        run: ./gradlew publishToMavenLocal -Dopensearch.version=1.0.0-rc1
       # This step uses the checkout Github action: https://github.com/actions/checkout
       - name: Checkout Branch
         uses: actions/checkout@v2
       - name: Build with Gradle
-        run: ./gradlew build -Dopensearch.version=1.0.0
+        run: ./gradlew build -Dopensearch.version=1.0.0-rc1
       - name: Pull and Run Docker for security tests
         run: |
           ##list_of_files=`ls`
           ##echo "List files: " $ls
-          version=1.0.0
+          version=1.0.0-rc1
           plugin_version=1.0.0.0
           cd ../..
           ##list_of_files=`ls`
